--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h1>The Winter Photographer</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem culpa nobis corrupti perferendis blanditiis quasi? Deleniti assumenda modi iure nesciunt enim doloribus possimus fugiat quam dolores minima adipisci, natus architecto!</p>
-                </div>
+                    <p>Capturing moments through the lens is not just about taking a picture; it’s about freezing time, telling stories, and evoking emotions. Every photograph holds a memory, a connection, and a glimpse into a world seen through the eyes of the photographer.</p>
+
             </div>
         </div>
     </section>
